fix underline color being fixed in dark mode in tab section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -195,9 +195,13 @@ body.dark, .dark svg, .dark span, .dark button, .dark label, .dark h1 {
     }
 }
 
+#work-tab, #education-tab, #skills-tab {
+    border-color: transparent;
+}
+
 #work:checked ~ .tabs-panels #work-panel,
 #education:checked ~ .tabs-panels #education-panel,
-#skills:checked ~ .tabs-panels #skills-panel  {
+#skills:checked ~ .tabs-panels #skills-panel {
     display: inline-block
 }
 
